--- a/AutoServiceManager/connections.config
+++ b/AutoServiceManager/connections.config
@@ -1,5 +1,5 @@
 <connectionStrings>
 	<add name="TMI-ServiceMgr"
 		 connectionString="PROVIDER=Microsoft.Jet.OLEDB.4.0;Data Source=C:\Users\nlitz\Development\TMI Consulting\Auto Service Manager\AutoServiceManager\AutoServiceManager\Database\TMI-ServiceMgr.mdb"
-		 providerName="System.Data.OleDb"/>
+		 providerName="Microsoft.Jet.OLEDB.4.0"/>
 </connectionStrings>
