--- a/AutoServiceManager/connection.ini
+++ b/AutoServiceManager/connection.ini
@@ -1,1 +1,1 @@
-CONNECTION-STRING=
+CONNECTION-STRING=PROVIDER=Microsoft.Jet.OLEDB.4.0;Data Source=C:\Users\nlitz\Development\TMI Consulting\Auto Service Manager\AutoServiceManager\AutoServiceManager\Database\TMI-ServiceMgr.mdb
