Added dictionary driven InitialValues class that maintains a dictionary of controls' initial values and functions to check against those initial values. Only basic testing done, may be subject to additional changes

--- a/AutoServiceManager/AutoServiceManager.vbproj
+++ b/AutoServiceManager/AutoServiceManager.vbproj
@@ -73,6 +73,7 @@
     <Import Include="System.Threading.Tasks" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="initialValues.vb" />
     <Compile Include="companyInfo.Designer.vb">
       <DependentUpon>companyInfo.vb</DependentUpon>
     </Compile>
