Set application shutdown mode to 'when last form closes' instead of 'when startup form closes.' This way, changeScreen can CLOSE the last screen, and then when the user goes back to a screen, it will actually be reloaded. This change was only made for the home screen so far, but the 'onClosing' event for each form will have to be removed

--- a/AutoServiceManager/AutoServiceManager.vbproj
+++ b/AutoServiceManager/AutoServiceManager.vbproj
@@ -111,6 +111,12 @@
     <Compile Include="inventoryMaintenance.vb">
       <SubType>Form</SubType>
     </Compile>
+    <Compile Include="laborCodeMaintenance.Designer.vb">
+      <DependentUpon>laborCodeMaintenance.vb</DependentUpon>
+    </Compile>
+    <Compile Include="laborCodeMaintenance.vb">
+      <SubType>Form</SubType>
+    </Compile>
     <Compile Include="loginForm.vb">
       <SubType>Form</SubType>
     </Compile>
@@ -178,6 +184,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="inventoryMaintenance.resx">
       <DependentUpon>inventoryMaintenance.vb</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="laborCodeMaintenance.resx">
+      <DependentUpon>laborCodeMaintenance.vb</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="loginForm.resx">
       <DependentUpon>loginForm.vb</DependentUpon>
