--- a/AutoServiceManager/AutoServiceManager.vbproj
+++ b/AutoServiceManager/AutoServiceManager.vbproj
@@ -137,6 +137,12 @@
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="globals.vb" />
+    <Compile Include="masterTaskMaintenance.Designer.vb">
+      <DependentUpon>masterTaskMaintenance.vb</DependentUpon>
+    </Compile>
+    <Compile Include="masterTaskMaintenance.vb">
+      <SubType>Form</SubType>
+    </Compile>
     <Compile Include="mfgMaintenance.Designer.vb">
       <DependentUpon>mfgMaintenance.vb</DependentUpon>
     </Compile>
@@ -214,6 +220,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="loginForm.resx">
       <DependentUpon>loginForm.vb</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="masterTaskMaintenance.resx">
+      <DependentUpon>masterTaskMaintenance.vb</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="mfgMaintenance.resx">
       <DependentUpon>mfgMaintenance.vb</DependentUpon>
