--- a/AutoServiceManager/AutoServiceManager.vbproj
+++ b/AutoServiceManager/AutoServiceManager.vbproj
@@ -143,6 +143,12 @@
     <Compile Include="masterTaskMaintenance.vb">
       <SubType>Form</SubType>
     </Compile>
+    <Compile Include="masterTaskPartsMaintenance.Designer.vb">
+      <DependentUpon>masterTaskPartsMaintenance.vb</DependentUpon>
+    </Compile>
+    <Compile Include="masterTaskPartsMaintenance.vb">
+      <SubType>Form</SubType>
+    </Compile>
     <Compile Include="mfgMaintenance.Designer.vb">
       <DependentUpon>mfgMaintenance.vb</DependentUpon>
     </Compile>
@@ -223,6 +229,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="masterTaskMaintenance.resx">
       <DependentUpon>masterTaskMaintenance.vb</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="masterTaskPartsMaintenance.resx">
+      <DependentUpon>masterTaskPartsMaintenance.vb</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="mfgMaintenance.resx">
       <DependentUpon>mfgMaintenance.vb</DependentUpon>
