--- a/AutoServiceManager/AutoServiceManager.vbproj
+++ b/AutoServiceManager/AutoServiceManager.vbproj
@@ -103,6 +103,12 @@
     <Compile Include="customerMaintenance.vb">
       <SubType>Form</SubType>
     </Compile>
+    <Compile Include="editMasterTaskLabor.Designer.vb">
+      <DependentUpon>editMasterTaskLabor.vb</DependentUpon>
+    </Compile>
+    <Compile Include="editMasterTaskLabor.vb">
+      <SubType>Form</SubType>
+    </Compile>
     <Compile Include="home.Designer.vb">
       <DependentUpon>home.vb</DependentUpon>
     </Compile>
@@ -220,6 +226,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="customerMaintenance.resx">
       <DependentUpon>customerMaintenance.vb</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="editMasterTaskLabor.resx">
+      <DependentUpon>editMasterTaskLabor.vb</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="home.resx">
       <DependentUpon>home.vb</DependentUpon>
