Added all appropriate controls to addMasterTaskLabor

--- a/AutoServiceManager/AutoServiceManager.vbproj
+++ b/AutoServiceManager/AutoServiceManager.vbproj
@@ -73,6 +73,12 @@
     <Import Include="System.Threading.Tasks" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="addMasterTaskLabor.Designer.vb">
+      <DependentUpon>addMasterTaskLabor.vb</DependentUpon>
+    </Compile>
+    <Compile Include="addMasterTaskLabor.vb">
+      <SubType>Form</SubType>
+    </Compile>
     <Compile Include="addMasterTaskPart.Designer.vb">
       <DependentUpon>addMasterTaskPart.vb</DependentUpon>
     </Compile>
@@ -209,6 +215,9 @@
     </Compile>
   </ItemGroup>
   <ItemGroup>
+    <EmbeddedResource Include="addMasterTaskLabor.resx">
+      <DependentUpon>addMasterTaskLabor.vb</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="addMasterTaskPart.resx">
       <DependentUpon>addMasterTaskPart.vb</DependentUpon>
     </EmbeddedResource>
