Added class used in conjunction with update/insert overloads that allow for additional values to be inserted. Implemented into all overloads (only one right now) that use additionalValues, and implemented as such on all forms that use it.

--- a/AutoServiceManager/AutoServiceManager.vbproj
+++ b/AutoServiceManager/AutoServiceManager.vbproj
@@ -73,6 +73,7 @@
     <Import Include="System.Threading.Tasks" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="additionalValue.vb" />
     <Compile Include="addMasterTaskLabor.Designer.vb">
       <DependentUpon>addMasterTaskLabor.vb</DependentUpon>
     </Compile>
