Added new INI file that will maintain the address of the primary database, or the database that is to be backed up upon closing each time. Also added two global functions, one being a generic INI file reader, and the other being a function that actually makes the database copy

--- a/AutoServiceManager/AutoServiceManager.vbproj
+++ b/AutoServiceManager/AutoServiceManager.vbproj
@@ -299,6 +299,9 @@
     <None Include="App.config" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="PrimaryDatabaseFilePath.ini">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
     <None Include="Resources\SchweikarthsLogo.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.VisualBasic.targets" />
