--- a/AutoServiceManager/AutoServiceManager.vbproj
+++ b/AutoServiceManager/AutoServiceManager.vbproj
@@ -142,6 +142,12 @@
     <Compile Include="inventoryMaintenance.vb">
       <SubType>Form</SubType>
     </Compile>
+    <Compile Include="invoices.Designer.vb">
+      <DependentUpon>invoices.vb</DependentUpon>
+    </Compile>
+    <Compile Include="invoices.vb">
+      <SubType>Form</SubType>
+    </Compile>
     <Compile Include="laborCodeMaintenance.Designer.vb">
       <DependentUpon>laborCodeMaintenance.vb</DependentUpon>
     </Compile>
@@ -248,6 +254,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="inventoryMaintenance.resx">
       <DependentUpon>inventoryMaintenance.vb</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="invoices.resx">
+      <DependentUpon>invoices.vb</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="laborCodeMaintenance.resx">
       <DependentUpon>laborCodeMaintenance.vb</DependentUpon>
