Successfully consolidated the two ini files for the project into one new one named 'AutoServiceManagerParams.ini'

--- a/AutoServiceManager/AutoServiceManager.vbproj
+++ b/AutoServiceManager/AutoServiceManager.vbproj
@@ -293,7 +293,7 @@
     </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
-    <None Include="connection.ini">
+    <None Include="AutoServiceManagerParams.ini">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
     <None Include="My Project\Application.myapp">
@@ -308,9 +308,6 @@
     <None Include="App.config" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="DatabaseBackupParams.ini">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </None>
     <None Include="Resources\SchweikarthsLogo.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.VisualBasic.targets" />
