--- a/AutoServiceManager/AutoServiceManager.vbproj
+++ b/AutoServiceManager/AutoServiceManager.vbproj
@@ -79,6 +79,12 @@
     <Compile Include="addInvTaskLabor.vb">
       <SubType>Form</SubType>
     </Compile>
+    <Compile Include="addInvTaskPart.Designer.vb">
+      <DependentUpon>addInvTaskPart.vb</DependentUpon>
+    </Compile>
+    <Compile Include="addInvTaskPart.vb">
+      <SubType>Form</SubType>
+    </Compile>
     <Compile Include="additionalValue.vb" />
     <Compile Include="addMasterTaskLabor.Designer.vb">
       <DependentUpon>addMasterTaskLabor.vb</DependentUpon>
@@ -236,6 +242,9 @@
   <ItemGroup>
     <EmbeddedResource Include="addInvTaskLabor.resx">
       <DependentUpon>addInvTaskLabor.vb</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="addInvTaskPart.resx">
+      <DependentUpon>addInvTaskPart.vb</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="addMasterTaskLabor.resx">
       <DependentUpon>addMasterTaskLabor.vb</DependentUpon>
