--- a/AutoServiceManager/AutoServiceManager.vbproj
+++ b/AutoServiceManager/AutoServiceManager.vbproj
@@ -128,6 +128,12 @@
     <Compile Include="editInvTaskLabor.vb">
       <SubType>Form</SubType>
     </Compile>
+    <Compile Include="editInvTaskPart.Designer.vb">
+      <DependentUpon>editInvTaskPart.vb</DependentUpon>
+    </Compile>
+    <Compile Include="editInvTaskPart.vb">
+      <SubType>Form</SubType>
+    </Compile>
     <Compile Include="editMasterTaskLabor.Designer.vb">
       <DependentUpon>editMasterTaskLabor.vb</DependentUpon>
     </Compile>
@@ -275,6 +281,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="editInvTaskLabor.resx">
       <DependentUpon>editInvTaskLabor.vb</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="editInvTaskPart.resx">
+      <DependentUpon>editInvTaskPart.vb</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="editMasterTaskLabor.resx">
       <DependentUpon>editMasterTaskLabor.vb</DependentUpon>
