Added Daily Receipts form, added it to navigation, as well as made inventory maintenance form non-resizable

--- a/AutoServiceManager/AutoServiceManager.vbproj
+++ b/AutoServiceManager/AutoServiceManager.vbproj
@@ -122,6 +122,12 @@
     <Compile Include="customerMaintenance.vb">
       <SubType>Form</SubType>
     </Compile>
+    <Compile Include="dailyReceiptsReport.Designer.vb">
+      <DependentUpon>dailyReceiptsReport.vb</DependentUpon>
+    </Compile>
+    <Compile Include="dailyReceiptsReport.vb">
+      <SubType>Form</SubType>
+    </Compile>
     <Compile Include="editInvTaskLabor.Designer.vb">
       <DependentUpon>editInvTaskLabor.vb</DependentUpon>
     </Compile>
@@ -284,6 +290,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="customerMaintenance.resx">
       <DependentUpon>customerMaintenance.vb</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="dailyReceiptsReport.resx">
+      <DependentUpon>dailyReceiptsReport.vb</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="editInvTaskLabor.resx">
       <DependentUpon>editInvTaskLabor.vb</DependentUpon>
