--- a/AutoServiceManager/AutoServiceManager.vbproj
+++ b/AutoServiceManager/AutoServiceManager.vbproj
@@ -256,6 +256,12 @@
     <Compile Include="taskMaintenance.vb">
       <SubType>Form</SubType>
     </Compile>
+    <Compile Include="unpaidInvoicesReport.Designer.vb">
+      <DependentUpon>unpaidInvoicesReport.vb</DependentUpon>
+    </Compile>
+    <Compile Include="unpaidInvoicesReport.vb">
+      <SubType>Form</SubType>
+    </Compile>
     <Compile Include="vehicleMaintenance.Designer.vb">
       <DependentUpon>vehicleMaintenance.vb</DependentUpon>
     </Compile>
@@ -350,6 +356,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="taskMaintenance.resx">
       <DependentUpon>taskMaintenance.vb</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="unpaidInvoicesReport.resx">
+      <DependentUpon>unpaidInvoicesReport.vb</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="vehicleMaintenance.resx">
       <DependentUpon>vehicleMaintenance.vb</DependentUpon>
