--- a/AutoServiceManager/AutoServiceManager.vbproj
+++ b/AutoServiceManager/AutoServiceManager.vbproj
@@ -234,6 +234,12 @@
     <Compile Include="mfgMaintenance.vb">
       <SubType>Form</SubType>
     </Compile>
+    <Compile Include="monthlyTaxReport.Designer.vb">
+      <DependentUpon>monthlyTaxReport.vb</DependentUpon>
+    </Compile>
+    <Compile Include="monthlyTaxReport.vb">
+      <SubType>Form</SubType>
+    </Compile>
     <Compile Include="My Project\AssemblyInfo.vb" />
     <Compile Include="My Project\Application.Designer.vb">
       <AutoGen>True</AutoGen>
@@ -359,6 +365,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="mfgMaintenance.resx">
       <DependentUpon>mfgMaintenance.vb</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="monthlyTaxReport.resx">
+      <DependentUpon>monthlyTaxReport.vb</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="My Project\Resources.resx">
       <Generator>VbMyResourcesResXFileCodeGenerator</Generator>
