modified ini file

--- a/AutoServiceManager/AutoServiceManagerParams.ini
+++ b/AutoServiceManager/AutoServiceManagerParams.ini
@@ -1,5 +1,5 @@
 CONNECTION-STRING=PROVIDER=Microsoft.Jet.OLEDB.4.0;Data Source=C:\Users\nlitz\Development\TMI Consulting\Auto Service Manager\AutoServiceManager\AutoServiceManager\Database\TMI-ServiceMgr.mdb
 PRIMARY-DATABASE-FILEPATH=C:\Users\nlitz\Development\TMI Consulting\Auto Service Manager\AutoServiceManager\AutoServiceManager\Database\TMI-ServiceMgr.mdb
 BACKUP-DIRECTORY=C:\Users\nlitz\Development\TMI Consulting\Auto Service Manager\AutoServiceManager\AutoServiceManager\Database\Backups\
-USERNAME=Schweikarth
-PASSWORD=test
+USERNAME=schweikarth
+PASSWORD=schweikarth
